--- a/style.css
+++ b/style.css
@@ -73,6 +73,49 @@ main {
   margin-right: 0.5rem;
 }
 
+.infoContainer .contactInfo a:hover {
+  -webkit-animation: iconAnimation 2s forwards;
+          animation: iconAnimation 2s forwards;
+}
+
+@-webkit-keyframes iconAnimation {
+  0% {
+  }
+  100% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+}
+
+@keyframes iconAnimation {
+  0% {
+  }
+  100% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+}
+
+@-webkit-keyframes cardAnimation {
+  0% {
+  }
+  100% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+    background-color: rgba(213, 213, 213, 0.739);
+  }
+}
+
+@keyframes cardAnimation {
+  0% {
+  }
+  100% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+    background-color: rgba(213, 213, 213, 0.739);
+  }
+}
+
 .line {
   width: 100%;
   height: 2px;
@@ -94,15 +137,22 @@ main {
   text-align: center;
 }
 
+.containre {
+  width: 32%;
+  text-decoration: none;
+}
+
 .card {
   padding: 10px;
-  width: 32%;
   margin-right: 1rem;
+  border-radius: 20px;
+  padding: 20px;
   margin-top: 1rem;
 }
 
 .card:hover {
-  background-color: red;
+  -webkit-animation: cardAnimation 1s forwards;
+          animation: cardAnimation 1s forwards;
 }
 
 .projectContainer {
@@ -112,6 +162,9 @@ main {
   margin-top: 2rem;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .cardImageContainer {
@@ -120,6 +173,9 @@ main {
 
 .cardImageContainer img {
   width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 200px;
 }
 
 .cardHeader {
@@ -140,13 +196,33 @@ main {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .techCard {
-  margin-right: 10px;
+  min-width: 75px;
+  margin: 0 1rem;
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 1rem;
   padding: 0 20px;
-  width: 10%;
+  max-width: 100px;
 }
 
 .techCard img {
@@ -161,5 +237,138 @@ main {
 
 .contact {
   margin-top: 3rem;
+}
+
+.getInTouch {
+  margin-top: 3rem;
+  width: 100%;
+  background-color: #E9ECEF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem;
+}
+
+.getInTouchInner {
+  text-align: center;
+  width: 100%;
+}
+
+.getInTouchInner h1, .getInTouchInner p {
+  margin: 2rem 0;
+}
+
+.getInTouchInner h1 {
+  font-size: 2.5rem;
+}
+
+.getInTouchInner a {
+  text-decoration: none;
+}
+
+.getInTouchInner a:hover {
+  text-decoration: none;
+  color: rgba(255, 0, 0, 0.692);
+}
+
+.getInTouchInner p {
+  font-size: 1.2rem;
+}
+
+@media (min-width: 600px) {
+  .getInTouchInner {
+    width: 60%;
+  }
+  .getInTouch {
+    padding: 4rem 0;
+  }
+  .getInTouchInner h1 {
+    font-size: 3rem;
+  }
+  .getInTouchInner p {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .projectContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .projectContainer img {
+    width: 100%;
+    height: auto;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .card {
+    padding: 10px;
+    width: 50%;
+    padding: 20px;
+    margin-top: 2rem;
+  }
+  .card:hover {
+    -webkit-animation: cardAnimation 1s forwards;
+            animation: cardAnimation 1s forwards;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  main {
+    width: 100%;
+  }
+  .projectContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .projectContainer img {
+    width: 100%;
+  }
+  .card {
+    padding: 10px;
+    width: 90%;
+    padding: 20px;
+    margin-top: 2rem;
+  }
+  .card:hover {
+    -webkit-animation: cardAnimation 1s forwards;
+            animation: cardAnimation 1s forwards;
+  }
+  .myPic {
+    display: none;
+  }
+  .infoContainer {
+    text-align: center;
+    width: 100%;
+  }
+  .infoContainer .contactInfo {
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .width {
+    width: 90%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
