--- a/style.scss
+++ b/style.scss
@@ -45,13 +45,44 @@ main{
     .contactInfo{
         display: flex;
         i{
+            
             cursor: pointer;
             color:#2E3440;
             margin-top: 1rem;
             font-size: 2rem;
             margin-right: 0.5rem;
+
         }
+        a{
+            &:hover{
+                animation: iconAnimation 2s forwards;
+            }
+        }
+
+        
     }
+}
+
+@keyframes iconAnimation{
+    0%{
+        
+    }
+    100%{
+        transform:translateY(-10px);
+        
+    }
+
+}
+@keyframes cardAnimation{
+    0%{
+        
+    }
+    100%{
+        transform:translateY(-10px);
+        background-color: rgba(213, 213, 213, 0.739);
+        
+    }
+
 }
 
 .line{
@@ -71,24 +102,33 @@ main{
 .align{
     text-align: center;
 }
+.containre{
+    width: 32%;
+    text-decoration: none;
+}
 .card{
     padding:10px;
-    width: 32%;
+    
     margin-right:1rem;
+    border-radius: 20px; 
+    padding:20px;
     margin-top: 1rem;
     &:hover{
-        background-color: red;
+        animation: cardAnimation 1s forwards;
     }
 }
 .projectContainer{
     display: flex;
     margin-top: 2rem;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .cardImageContainer{
     width: 100%;
     img{
         width: 100%;
+        object-fit: cover;
+        height: 200px;
     }
 }
 .cardHeader{
@@ -103,12 +143,20 @@ main{
     display: flex;
     margin-top: 1rem;
     justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
 }
 .techCard{
-    margin-right: 10px;
+    min-width: 75px;
+    margin: 0 1rem;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
     padding:  0 20px;
-    width: 10%;
+    max-width: 100px;
     img{
         width: 100%;
     }
@@ -120,4 +168,115 @@ main{
 }
 .contact{
     margin-top: 3rem;
+}
+
+.getInTouch{
+    margin-top: 3rem;
+    width: 100%;
+    background-color: #E9ECEF;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding:1rem;
+
+}
+.getInTouchInner{
+    text-align: center;
+    width: 100%;
+    
+}
+
+.getInTouchInner h1, .getInTouchInner p{
+    margin: 2rem 0;
+}
+.getInTouchInner h1{
+    font-size: 2.5rem;
+}
+.getInTouchInner a {
+    text-decoration: none;
+}
+.getInTouchInner a:hover{
+    text-decoration: none;
+    color: rgba(255, 0, 0, 0.692);
+}
+.getInTouchInner p{
+    font-size: 1.2rem;
+}
+
+@media (min-width:600px){
+    .getInTouchInner{
+
+        width: 60%;
+    }
+    .getInTouch{
+        padding:4rem 0 ;
+    
+    }
+    
+.getInTouchInner h1{
+    font-size: 3rem;
+}
+.getInTouchInner p{
+    font-size: 1.5rem;
+}
+}
+
+
+
+@media screen and (max-width:1000px) {
+    .projectContainer{
+        flex-direction: column;
+        align-items: center;
+        img{
+            width: 100%;    
+            height: auto;
+            object-fit: cover
+        }
+    }
+    .card{
+        padding:10px;
+        width: 50%;
+        padding:20px;
+        margin-top: 2rem;
+        &:hover{
+            animation: cardAnimation 1s forwards;
+        }
+    }
+}
+@media screen and (max-width:500px) {
+    main{
+        width: 100%;
+    }
+    .projectContainer{
+        flex-direction: column;
+        align-items: center;
+        img{
+            width: 100%;    
+
+        }
+    }
+    .card{
+        padding:10px;
+        width: 90%;
+        padding:20px;
+        margin-top: 2rem;
+        &:hover{
+            animation: cardAnimation 1s forwards;
+        }
+    }
+    .myPic{
+        display: none;
+    }
+    .infoContainer{
+        text-align: center;
+        width: 100%;
+        .contactInfo{
+            text-align: center;
+            justify-content: center;
+        }
+    }
+    .width{
+        width: 90%;
+    }
 }
